@@ -292,6 +292,19 @@ public class BasicMenuUI extends BasicMenuItemUI
       manager.processMouseEvent(e);
     }
 
+    private boolean popupVisible()
+    {
+      JMenuBar mb = (JMenuBar) ((JMenu)menuItem).getParent();
+      // check if mb.isSelected because if no menus are selected
+      // we don't have to look through the list for popup menus
+      if (!mb.isSelected())
+        return false;
+      for (int i=0;i<mb.getMenuCount();i++)
+        if (((JMenu)mb.getComponent(i)).isPopupMenuVisible())
+          return true;
+      return false;
+    }
+
     public void mouseEntered(MouseEvent e)
     {
       /* When mouse enters menu item, it should be considered selected
@@ -303,12 +316,15 @@ public class BasicMenuUI extends BasicMenuItemUI
                it will be selected)
       */
       JMenu menu = (JMenu) menuItem;
-      JMenuBar mb = (JMenuBar) menu.getParent();
-      if (! menu.isTopLevelMenu()
-          || (mb.isSelected() && (((JMenu)(mb.getComponent             
-                                           (mb.getSelectionModel().
-                                            getSelectedIndex()))).
-                                  isPopupMenuVisible()) && ! menu.isArmed()))
+
+      // NOTE: the following if used to require !menu.isArmed but I could find
+      // no reason for this and it was preventing some JDK-compatible behaviour.
+      // Specifically, if a menu is selected but its popup menu not visible,
+      // and then another menu is selected whose popup menu IS visible, when
+      // the mouse is moved over the first menu, its popup menu should become
+      // visible.
+
+      if (! menu.isTopLevelMenu() || popupVisible())
         {
 	  // set new selection and forward this event to MenuSelectionManager
 	  MenuSelectionManager manager = MenuSelectionManager.defaultManager();
